--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ header a:hover {
 */
 #showcase {
   min-height: 400px;
-  background: url('../img/showcase.jpg') no-repeat;
+  background: url('showcase.jpg') no-repeat;
   background-position: center;
   background-size: cover;
   text-align: center;
